--- a/README
+++ b/README
@@ -13,7 +13,7 @@
 
 Как подключить библиотеку:
 
- git clone https://piroman-lynx@github.com/piroman-lynx/lpg_csrf_token.git lpg_csrf_token
+ git clone git://github.com/piroman-lynx/lpg_csrf_token.git
 
 После вам нужно подключить файл lpg_csrf_token/bootstrap.php в Ваш основной входной файл (обычно это index.php).
 
